add basic styles to panels card

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 
     <body>
         <div class="container">
-            <div class="panel active" style="background: center / cover no-repeat url('/imgs/chicago-sign.jpg');">
+            <div class="panel active" style="background: url('/imgs/chicago-sign.jpg');">
                 <h3 class="panel-heading">Explore Chicagoland</h3>
             </div>
-            <div class="panel" style="background: center / cover no-repeat url(/imgs/cloud-gate.jpg)">
+            <div class="panel" style="background: url('/imgs/cloud-gate.jpg')">
                 <h3 class="panel-heading">Cloud Gate</h3>
             </div>
-            <div class="panel" style="background: center / cover no-repeat url('/imgs/chicago-theater.jpg');">
+            <div class="panel" style="background: url('/imgs/chicago-theater.jpg');">
                 <h3 class="panel-heading">Catch A Show</h3>
             </div>
-            <div class="panel" style="background: center/ cover no-repeat url('/imgs/chicago-riverwalk.jpg')">
+            <div class="panel" style="background: url('/imgs/chicago-riverwalk.jpg')">
                 <h3 class="panel-heading">See The Riverwalk</h3>
             </div>
-            <div class="panel" style="background: center/ cover no-repeat url('/imgs/chicago-night.jpg')">
+            <div class="panel" style="background: url('/imgs/chicago-night.jpg')">
                 <h3 class="panel-heading">Enjoy The Nightlife</h3>
             </div>
         </div>
